feat: implement set operation node