@@ -1,7 +1,5 @@
 package club.mondaylunch.gatos.basicnodes;
 
-import static java.util.stream.Collectors.toList;
-
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -16,12 +14,12 @@ import club.mondaylunch.gatos.core.graph.connector.NodeConnector;
 import club.mondaylunch.gatos.core.graph.type.NodeType;
 
 public class ListSetOperationNodeType extends NodeType.Process {
-    public static final DataType<SetOperation> SET_OPERATION = DataType.register("set_operation", SetOperation.class);
+    private static final DataType<SetOperation> SET_OPERATION = DataType.register("set_operation", SetOperation.class);
 
     @Override
     public Map<String, DataBox<?>> settings() {
         return Map.of(
-                "mode", SET_OPERATION.create(SetOperation.UNION)
+            "set_operation", SET_OPERATION.create(SetOperation.UNION)
         );
     }
 
@@ -35,17 +33,28 @@ public class ListSetOperationNodeType extends NodeType.Process {
 
     @Override
     public Set<NodeConnector.Output<?>> outputs(UUID nodeId, Map<String, DataBox<?>> settings, Map<String, DataType<?>> inputTypes) {
-        var outputType = inputTypes.getOrDefault("list_type", ListDataType.GENERIC_LIST);
+        var outputType = this.getOutputListTypeOrThrow(inputTypes, "list_first", "list_second");
         return Set.of(
             new NodeConnector.Output<>(nodeId, "output", outputType));
     }
 
     @Override
     public Map<String, CompletableFuture<DataBox<?>>> compute(Map<String, DataBox<?>> inputs, Map<String, DataBox<?>> settings, Map<String, DataType<?>> inputTypes) {
+        var outputType = this.getOutputListTypeOrThrow(inputTypes, "list_first", "list_second");
         var currentOp = DataBox.get(settings, "set_operation", SET_OPERATION).orElseThrow();
-        var first = new ArrayList<>(DataBox.get(inputs, "list_first", ListDataType.GENERIC_LIST).orElseThrow());
-        var second = new ArrayList<>(DataBox.get(inputs, "list_second", ListDataType.GENERIC_LIST).orElseThrow());
-        return Map.of();
+        List<Object> first = new ArrayList<>(DataBox.get(inputs, "list_first", ListDataType.GENERIC_LIST).orElseThrow());
+        List<Object> second = new ArrayList<>(DataBox.get(inputs, "list_second", ListDataType.GENERIC_LIST).orElseThrow());
+        return Map.of("output",
+            CompletableFuture.completedFuture(this.getGenericListBox(currentOp.compute(first, second), outputType))
+        );
+    }
+
+    private DataType<?> getOutputListTypeOrThrow(Map<String, DataType<?>> inputTypes, String firstKey, String secondKey) {
+        var first = inputTypes.getOrDefault(firstKey, ListDataType.GENERIC_LIST);
+        if (!first.equals(inputTypes.getOrDefault(secondKey, ListDataType.GENERIC_LIST))) {
+            throw new IllegalArgumentException("Both Lists are not of the same type.");
+        }
+        return first;
     }
 
     @SuppressWarnings({"unchecked", "ListUsedAsFieldOrParameterType"})
@@ -53,26 +62,30 @@ public class ListSetOperationNodeType extends NodeType.Process {
         return ((DataType<T>) type).create((T) list);
     }
 
-    public enum SetOperation {
+    private enum SetOperation {
         UNION {
             @Override
-            public <T> List<T> apply(List<T> first, List<T> second) {
+            public <T> List<T> compute(List<T> first, List<T> second) {
                 first.addAll(second);
-                return first.stream().distinct().collect(toList());
+                return first.stream().distinct().toList();
             }
         },
         INTERSECTION {
             @Override
-            public <T> List<T> apply(List<T> first, List<T> second) {
-                return first.stream().distinct().filter(second::contains).collect(toList());
+            public <T> List<T> compute(List<T> first, List<T> second) {
+                return first.stream().distinct().filter(second::contains).toList();
             }
         },
         DIFFERENCE {
             @Override
-            public <T> List<T> apply(List<T> first, List<T> second) {
-                return first.stream().distinct().filter(o -> !second.contains(o)).collect(toList());
+            public <T> List<T> compute(List<T> first, List<T> second) {
+                return first.stream().distinct().filter(o -> !second.contains(o)).toList();
             }
         };
-        public abstract <T> List<T> apply(List<T> first, List<T> second);
+        protected abstract <T> List<T> compute(List<T> first, List<T> second);
+    }
+
+    public static DataBox<SetOperation> getOperationSettingDataBox(String operation) {
+        return SET_OPERATION.create(SetOperation.valueOf(operation.toUpperCase()));
     }
 }
